Fixed test TestUpcallStructScope.java for --enable-native-access option